fix: 修复 LyricParser，微调 long break duration